[package]
name = "twipo-synchro"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12"
async-tungstenite = "0.17"
base64 = "0.13"
futures = "0.3"
httparse = "1.7"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
tungstenite = "0.17"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[profile.release]
strip = true
opt-level = "z"
lto = true

[[bin]]
name = "twipo-synchro"
path = "src/main.rs"

[[bin]]
name = "installer"
path = "src/installer.rs"
