[package]
name = "twipo-synchro"
license = "MIT"
version = "0.2.2"
edition = "2021"

[dependencies]
async-std = "1.13"
async-tungstenite = "0.28"
base64 = "0.22"
futures = "0.3"
httparse = "1.9"
image = "0.25"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
tungstenite = "0.24"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
strip = true
opt-level = "z"
lto = true

[[bin]]
name = "twipo-synchro"
path = "src/main.rs"

[[bin]]
name = "installer"
path = "src/installer.rs"
